--- a/_config.yml
+++ b/_config.yml
@@ -40,8 +40,8 @@ callouts:
 aux_links:
   "GitHub":
     - "https://github.com/pml-reading-club"
-  "Slack":
-    - "#"
+  "Discord":
+    - "https://discord.gg/H9ghwuuF"
 
 # Custom CSS (relative to /assets/css/)
 aux_links_new_tab: false
